# nos_sdk

./: .gitignore  README.md  data_type.h
.cursor/rules/: generator-ui-ini.mdc
app/ecu_hw_tunning/: config.h  ecu_hw_tunning_app.c  ecu_hw_tunning_app.h  ui.ini
app/iem_tunning/: config.h  iem_tunning_app.c  ui.ini  串口收发命令.docx
app/led_demo/: config.h  ui.ini  user_app_task.c
app/lvgl_app/porting/: lv_conf.h  lv_port_disp_template.c  lv_port_indev_template.c
app/lvgl_app/smart_gadget/: config.h  ui.h  ui.ini
app/modbus_demo/: config.h  modbus_app.c  modbus_app.h  modbus_master_app.c  modbus_master_app.h  modbus_slave_app.c  modbus_slave_app.h  ui.ini
middle/: nos_adc.h  nos_can.h  nos_common.h  nos_encoder.h  nos_i2c.h  nos_io.h  nos_key.h  nos_lcd.h  nos_led.h  nos_log.h  nos_mmi_mgr.h  nos_msg.h  nos_nvram.h  nos_pwm.h  nos_sys_tick.h  nos_time.h  nos_touchpad.h  nos_uart.h
platform/include/: drv_adc.h  drv_can.h  drv_common.h  drv_debug.h  drv_encoder.h  drv_io.h  drv_key.h  drv_lcd.h  drv_led.h  drv_misc.h  drv_nvram.h  drv_pwm.h  drv_sys_tick.h  drv_touchpad.h  drv_uart.h  drv_ui.h  win32.h
platform/win32/nos_simu/: ACom.h  CH341DLL.H  CMakeLists.txt  CSkinButton.h  CSkinEdit.h  nos_simu.cpp  nos_simu.h  nos_simuDlg.h  nossimu.rc  resource.h
platform/win32/nos_simu/Release/: nos_sdk.lib
platform/win32/nos_simu/res/: nossimu.rc2
